@@ -580,12 +580,13 @@ int HSM_PKCS11_session_new( unsigned long slot_id, CK_SESSION_HANDLE *hSession,
 		if (session_info.flags == flags) return PKI_OK;
 
 		// If flags are not the same, let's log the condition
-		PKI_log_debug("HSM_PKCS11_session_new()::Session flags returned "
+		PKI_log_debug("%s()::Session flags returned "
 			"from C_GetSessionInfo() differ from given argument: "
-			"Prev=0x%8.8X, Curr=0x%8.8X", session_info.flags, flags);
+			"Prev=0x%8.8X, Curr=0x%8.8X", __PRETTY_FUNCTION__,
+			session_info.flags, flags);
 	} else {
-		PKI_log_debug("HSM_PKCS11_session_new()::C_GetSessionInfo failed: "
-			"Error: [0x%8.8X]", rv);
+		PKI_log_debug("%s()::C_GetSessionInfo failed: Error: [0x%8.8X]",
+			      __PRETTY_FUNCTION__, rv);
 	}
 
 
@@ -593,9 +594,10 @@ int HSM_PKCS11_session_new( unsigned long slot_id, CK_SESSION_HANDLE *hSession,
 	// not valid or has different flags set
 	if((rv = lib->callbacks->C_OpenSession (slot_id, 
 			(CK_FLAGS) flags, NULL, NULL, hSession)) != CKR_OK ) {
-		PKI_log_debug("HSM_PKCS11_session new ()::Failed opening a "
-			"new session (flags = 0x%x) with the token (slot=%d) Error: [0x%8.8X]",
-					flags, slot_id, rv );
+		PKI_log_debug("%s()::Failed opening a new session "
+			      "(flags = 0x%x) with the token (slot=%d) "
+			      "Error: [0x%8.8X]", __PRETTY_FUNCTION__,
+			      flags, slot_id, rv );
 		return PKI_ERR;
 	}
 
@@ -658,15 +660,7 @@ int HSM_PKCS11_get_attribute (CK_OBJECT_HANDLE *hPkey,
 			void **data, CK_ULONG *size, PKCS11_HANDLER *lib ) {
 
 	CK_RV rv;
-
-	/*
-	CK_ATTRIBUTE pTemplate[] = {
-		{ 0, NULL,  0 },
-	};
-	*/
-
 	CK_ATTRIBUTE pTemplate[1];
-
 	CK_BYTE *p = NULL;
 
 	if( !hPkey || !hSession || !lib || !lib->callbacks ||
@@ -678,27 +672,21 @@ int HSM_PKCS11_get_attribute (CK_OBJECT_HANDLE *hPkey,
 	pTemplate[0].pValue = NULL;
 	pTemplate[0].ulValueLen = 0;
 
-	// PKI_log_debug("HSM_PKCS11_get_attribute()::getting attribute 0x%8.8X",
-	// 						attribute );
-
 	/* Let's get the size of the attribute */
 	if(( rv = lib->callbacks->C_GetAttributeValue(*hSession, *hPkey, 
 						pTemplate, 1 )) != CKR_OK ) {
-		PKI_log_debug("HSM_PKCS11_get_attribute()::Failed 0x%8.8X",rv);
+		PKI_log_debug("%s()::Failed 0x%8.8X", __PRETTY_FUNCTION__, rv);
 		return ( PKI_ERR );
 	}
 
-	// PKI_log_debug("HSM_PKCS11_get_attribute()::Attribute Size is %lu",
-	// 				pTemplate.ulValueLen );
-
 	if( pTemplate[0].ulValueLen <= 0 ) {
-		PKI_log_debug("Attribute is Empty!");
+		PKI_log_debug("%s()::Attribute is Empty!", __PRETTY_FUNCTION__);
 		return ( PKI_ERR );
 	}
 
 	if((p = (CK_BYTE *) PKI_Malloc ( pTemplate[0].ulValueLen )) == NULL ) {
-		PKI_log_err ("Memory Error");
-		return ( PKI_ERR );
+		PKI_log_err ("%s()::Memory Error", __PRETTY_FUNCTION__);
+		return ( PKI_ERR_MEMORY_ALLOC );
 	}
 
 	pTemplate[0].pValue = p;
@@ -707,23 +695,13 @@ int HSM_PKCS11_get_attribute (CK_OBJECT_HANDLE *hPkey,
 	/* Now that we know the size, let's get the attribute */
 	if(( rv = lib->callbacks->C_GetAttributeValue( *hSession, *hPkey, 
 						pTemplate, 1 )) != CKR_OK ) {
-		PKI_log_err("HSM_PKCS11_get_attribute()::Failed (0x%8.8X)",
-		 					rv );
+		PKI_log_err("%s()::PKCS11/C_GetAttributeValue Failed (0x%8.8X)",
+		 	    __PRETTY_FUNCTION__, rv );
 		PKI_Free ( p );
 		return ( PKI_ERR );
 	}
 
 	*data = p;
-
-	// PKI_log_debug("HSM_PKCS11_get_attribute()::Completed succesfully");
-
-	/*
-	fprintf(stderr, ">>>>>> ATTRIBUTE [0x%8.8X] VALUE => ", attribute );
-	for ( i = 0 ; i < *size; i++ ) {
-		fprintf(stderr, "%x:", p[i] );
-	};
-	fprintf (stderr, "\n");
-	*/
 
 	return ( PKI_OK );
 }
