@@ -1,3 +1,7 @@
+* Dec 26 2016 Massimiliano Pala <madwolf@openca.org>
+- Fixed some memory issues w/ PKCS11 module
+- Fixed some tests details (min key sizes updated)
+
 * Mar 25 2015 Massimiliano Pala <madwolf@openca.org>
 - Added responderId type parameter in OCSP response signing
 
